--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,2 @@
+<script>window.BASE='{{ "" | relative_url }}';</script>
 <link rel="stylesheet" href="{{ '/assets/css/site.css?v=' | append: site.github.build_revision | relative_url }}">
-
